# interpreter

./: CMakeLists.txt  IEC.md  main.cpp
include/: ast.h  interpreter.h  lexer.h  parser.h
src/: interpreter.cpp  lexer.cpp  parser.cpp
